# ClaimGuard-Network

./: .dockerignore  .gitignore  ClaimGuard_Technical_Spec.md  README.md  codecov.yml  coverage.ini  package.json  pnpm-lock.yaml  scratch.js  turbo.json
.azure/: deployment-plan.md
.github/: dependabot.yml
PhaseBreakDown/: ClaimGuard_Phase0_Environment_Setup_Spec.md  ClaimGuard_Phase1_Data_Generator_Spec.md
docs/: CI.md  ClaimGuard-Network.code-workspace  Phase0_Implementation_Runbook.md  access-control-matrix.md  alert-definitions.md  architecture-migration-blueprint.md  azure-production-architecture.md  backup-and-restore-runbook.md  claim-ingestion.md  demo-mode-plan.md  desktop-producer-windows.md  environment-matrix.md  incident-response-plan.md  observability-dashboards.md  operations-runbook.md  phase-11c-authentication.md  phase5-deferred-items.md  (+9 more)
services/detection-engine/: README.md  package.json  pyproject.toml
services/detection-engine/src/claimguard_detection_engine/: __init__.py  analytics.py  cli.py  detector.py  graph_store.py  loader.py  orchestration.py  pipeline.py  reference_data.py  rule_engine.py
services/detection-engine/src/claimguard_detection_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
services/detection-engine/tests/: test_detector.py  test_orchestration.py  test_pipeline.py
services/report-producer/: .coverage  Dockerfile  README.md  package.json  pyproject.toml
services/report-producer/src/claimguard_report_producer/: __init__.py  cli.py  contract.py  data_plane.py  detection_results.py  model_registry.py  model_report.py  model_service.py  outbox.py  publisher.py  runtime.py  snapshot.py  sources.py  worker.py
services/report-producer/src/claimguard_report_producer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/report-producer/tests/: test_cli.py  test_contract.py  test_data_plane_scope.py  test_detection_results.py  test_ingestion_runtime_flow.py  test_model_registry.py  test_model_report.py  test_model_service.py  test_publisher.py  test_runtime.py  test_snapshot.py  test_sources.py  test_worker.py
(+181 files in other folders)
