[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claimguard-detection-engine"
version = "0.1.0"
description = "Phase 4 detection engine for ClaimGuard synthetic claims data"
requires-python = ">=3.11"

[project.scripts]
claimguard-detect = "claimguard_detection_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]