[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claimguard-detection-engine"
version = "0.1.0"
description = "Tenant-scoped fraud detection engine for ClaimGuard claims data"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
