[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claimguard-report-producer"
version = "0.1.0"
description = "ClaimGuard report producer runtime and publishers"
requires-python = ">=3.11"

[project.scripts]
claimguard-produce-report = "claimguard_report_producer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
